[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/PlayerGlaive.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/glaive.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40.1452, 22.4921 )

[node name="PlayerGlaive" type="Area2D" groups=[
"Glaive",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 166.877, 76.3675 )
rotation = 1.5865
scale = Vector2( 1.6548, 0.980109 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 209.304, 72.1249 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 150.967, 70.3571 )
scale = Vector2( 4.85373, 2.16673 )

[connection signal="area_entered" from="." to="." method="_on_PlayerGlaive_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PlayerGlaive_body_entered"]
[connection signal="body_entered" from="." to="." method="_on_PlayerGlaive_body_entered1"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
